[gd_scene load_steps=2 format=3 uid="uid://deb7182c7c35n"]

[ext_resource type="Script" path="res://Scripts/value_handler.gd" id="1_x5444"]

[node name="ValueHandler" type="HBoxContainer"]
script = ExtResource("1_x5444")

[node name="Slider" type="HSlider" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.2

[node name="SpinBox" type="SpinBox" parent="."]
layout_mode = 2
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.2
suffix = "s"

[connection signal="value_changed" from="Slider" to="." method="_on_slider_value_changed"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_spin_box_value_changed"]
